--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4132,5 +4132,10 @@
     "CL_DV_OV_24_finish_sounds": "Заврши звуци",
     "CL_DV_OV_24_finish_sounds_content": "Изберете го интервалот на повторување на завршниот звук.",
     "CL_DV_OV_search_recipes": "Пребарајте рецепти",
-    "CL_CF_CM_search_history": "Историја на пребарување"
+    "CL_CF_CM_search_history": "Историја на пребарување",
+    "CL_DV_OV_24_egg_timer_pop_content": "Изберете го повторувањето и времетраењето на звукот што го слушате кога истекува тајмерот за јајца. \n\n Звукот на тајмерот за јајца се слуша...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Изберете го интервалот на повторување на завршниот звук кога ќе завршите програма за готвење. \n\n Завршниот звук се слуша...",
+    "CL_DV_OV_24_night_mode_pop_content": "",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Изберете кога режимот за сабота треба да започне.",
+    "input_email_address": "Внесете ја адресата на е-пошта"
 }
