--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4132,5 +4132,10 @@
     "CL_DV_OV_24_finish_sounds": "إنهاء الأصوات",
     "CL_DV_OV_24_finish_sounds_content": "اختر الفاصل الزمني لتكرار الصوت النهائي.",
     "CL_DV_OV_search_recipes": "البحث عن الوصفات",
-    "CL_CF_CM_search_history": "سجل البحث"
+    "CL_CF_CM_search_history": "سجل البحث",
+    "CL_DV_OV_24_egg_timer_pop_content": "حدد التكرار ومدة الصوت الذي تسمعه عند انتهاء مؤقت البيض. \n\n يمكن سماع صوت توقيت البيض...",
+    "CL_DV_OV_24_finish_sound_pop_content": "اختر الفاصل الزمني لتكرار صوت النهاية عند انتهاء برنامج الطهي. \n\n يمكن سماع صوت النهاية...",
+    "CL_DV_OV_24_night_mode_pop_content": "",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "حدد متى يجب أن يبدأ وضع السبت.",
+    "input_email_address": "أدخل عنوان البريد الإلكتروني"
 }
