--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4132,5 +4132,10 @@
     "CL_DV_OV_24_finish_sounds": "Dźwięki końcowe",
     "CL_DV_OV_24_finish_sounds_content": "Wybierz interwał powtarzania dźwięku końcowego.",
     "CL_DV_OV_search_recipes": "Wyszukaj przepisy",
-    "CL_CF_CM_search_history": "Historia wyszukiwania"
+    "CL_CF_CM_search_history": "Historia wyszukiwania",
+    "CL_DV_OV_24_egg_timer_pop_content": "Wybierz powtarzalność i czas trwania dźwięku, który usłyszysz, gdy minutnik skończy gotować jajka. \n\n Dźwięk minutnika jest słyszalny...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Wybierz interwał powtarzania dźwięku zakończenia po zakończeniu programu gotowania. \n\n Słychać dźwięk zakończenia...",
+    "CL_DV_OV_24_night_mode_pop_content": "",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Wybierz, kiedy ma rozpocząć się tryb szabatowy.",
+    "input_email_address": "Wprowadź adres e-mail"
 }
