--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4132,5 +4132,10 @@
     "CL_DV_OV_24_finish_sounds": "Avsluta ljud",
     "CL_DV_OV_24_finish_sounds_content": "Välj intervall för upprepning av slutljud.",
     "CL_DV_OV_search_recipes": "Sök recept",
-    "CL_CF_CM_search_history": "Sökhistorik"
+    "CL_CF_CM_search_history": "Sökhistorik",
+    "CL_DV_OV_24_egg_timer_pop_content": "Välj upprepning och varaktighet för ljudet du hör när en äggklocka går ut. \n\n Ljudet för äggklocka hörs...",
+    "CL_DV_OV_24_finish_sound_pop_content": "Välj intervall för slutljudupprepning när ett tillagningsprogram är klart. \n\n Slutljudet hörs...",
+    "CL_DV_OV_24_night_mode_pop_content": "",
+    "CL_DV_OV_24_sabbath_mode_pop_content": "Välj när sabbatsläget ska starta.",
+    "input_email_address": "Ange e-postadressen"
 }
